# cosmic-applet-docker

./: .gitignore  Cargo.toml  README.md  justfile
data/: com.example.CosmicAppletDocker.desktop
i18n/en/: cosmic_applet_docker.ftl
src/: app.rs  config.rs  docker.rs  lib.rs  localize.rs  main.rs
